--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  english_words: ^3.1.0
+  firebase_core: ^0.2.5  # add dependency for Firebase Core
   cloud_firestore: ^0.8.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # location: ^1.4.1
+  # mapbox_gl: ^0.0.1
 
 dev_dependencies:
   flutter_test:
